tmp/2.cloud_deps_public.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pl-cloud
    component: cloud-deps
    name: pl-nats
  name: pl-nats
  namespace: plc
spec:
  clusterIP: None
  ports:
  - name: client
    port: 4222
  - name: cluster
    port: 6222
  - name: monitor
    port: 8222
  - name: metrics
    port: 7777
  - name: leafnodes
    port: 7422
  - name: gateways
    port: 7522
  selector:
    app: pl-cloud
    component: cloud-deps
    name: pl-nats
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pl-cloud
  name: postgres
  namespace: plc
spec:
  ports:
  - port: 5432
  selector:
    app: pl-cloud
    name: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pl-cloud
  name: postgres
  namespace: plc
spec:
  selector:
    matchLabels:
      app: pl-cloud
  template:
    metadata:
      labels:
        app: pl-cloud
        name: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: pl
        - name: POSTGRES_USER
          value: pl
        - name: POSTGRES_PASSWORD
          value: pl
        image: postgres:13.3
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-pv-claim
          subPath: data
      volumes:
      - name: postgres-pv-claim
        persistentVolumeClaim:
          claimName: postgres-pv-claim
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: pl-cloud
    component: cloud-deps
    name: pl-nats
  name: pl-nats
  namespace: plc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pl-cloud
      component: cloud-deps
      name: pl-nats
  serviceName: pl-nats
  template:
    metadata:
      labels:
        app: pl-cloud
        component: cloud-deps
        name: pl-nats
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - pl-nats
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - command:
        - nats-server
        - --config
        - /etc/nats-config/nats.conf
        - -js
        image: nats:2.9.0-alpine3.16
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /nats-server -sl=ldm=/var/run/nats/nats.pid && /bin/sleep 60
        livenessProbe:
          httpGet:
            path: /
            port: 8222
          initialDelaySeconds: 10
          timeoutSeconds: 5
        name: pl-nats
        ports:
        - containerPort: 4222
          name: client
        - containerPort: 7422
          name: leafnodes
        - containerPort: 6222
          name: cluster
        - containerPort: 8222
          name: monitor
        - containerPort: 7777
          name: metrics
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: 8222
          initialDelaySeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/nats-config
          name: config-volume
        - mountPath: /etc/nats-server-tls-certs
          name: nats-server-tls-volume
        - mountPath: /var/run/nats
          name: pid
        - mountPath: /data/jetstream
          name: nats-sts-vol
      shareProcessNamespace: true
      terminationGracePeriodSeconds: 60
      volumes:
      - name: nats-server-tls-volume
        secret:
          secretName: service-tls-certs
      - configMap:
          name: nats-config
        name: config-volume
      - emptyDir: {}
        name: pid
  volumeClaimTemplates:
  - metadata:
      labels:
        app: pl-cloud
        component: cloud-deps
      name: nats-sts-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: pixie-nfs
