tmp/4.exporsed_services_gclb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"443": "cloud-proxy-backend-config",
      "4444": "cloud-proxy-backend-config", "5555": "cloud-proxy-backend-config"}}'
    cloud.google.com/app-protocols: '{"tcp-https": "HTTPS", "tcp-http2": "HTTP2",
      "tcp-grcp-web": "HTTP2"}'
    cloud.google.com/load-balancer-type: external
  labels:
    app: pl-cloud
  name: cloud-proxy-service
spec:
  ports:
  - name: tcp-https
    port: 443
    protocol: TCP
    targetPort: 56000
  - name: tcp-grcp-web
    port: 4444
    protocol: TCP
    targetPort: 56004
  - name: tcp-http2
    port: 5555
    protocol: TCP
    targetPort: 56000
  selector:
    app: pl-cloud
    name: cloud-proxy-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"51600":"vzconn-backend-config"}}'
    cloud.google.com/app-protocols: '{"tcp-http2":"HTTP2"}'
    cloud.google.com/load-balancer-type: external
  labels:
    app: pl-cloud
  name: vzconn-service
spec:
  ports:
  - name: tcp-http2
    port: 51600
    protocol: TCP
    targetPort: 51600
  selector:
    app: pl-cloud
    name: vzconn-server
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    networking.gke.io/managed-certificates: cloud-ingress-managed-cert
    networking.gke.io/v1beta1.FrontendConfig: frontend-config
  labels:
    app: pl-cloud
  name: cloud-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /pl.cloudapi.ArtifactTracker/
        pathType: Prefix
      - backend:
          service:
            name: vzconn-service
            port:
              number: 51600
        path: /px.services.VZConnService/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.ArtifactTracker/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.APIKeyManager/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.AuthService/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.ConfigService/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.OrganizationService/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.PluginService/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.UserService/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.VizierClusterInfo/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.VizierDeploymentKeyManager/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
        path: /px.cloudapi.VizierImageAuthorization/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 4444
        path: /px.api.vizierpb.VizierService/
        pathType: Prefix
      - backend:
          service:
            name: cloud-proxy-service
            port:
              number: 443
        path: /
        pathType: Prefix
