tmp/ing.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: demo-localhost
    namespace: default
  spec:
    ingressClassName: nginx
    rules:
    - host: demo.localdev.me
      http:
        paths:
        - backend:
            service:
              name: demo
              port:
                number: 80
          path: /
          pathType: Prefix
