tmp/my-cloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
  namespace: plc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: work.dev.withpixie.dev
      http:
        paths:
          - path: /pl.cloudapi.ArtifactTracker/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.services.VZConnService/
            pathType: Prefix
            backend:
              service:
                name: vzconn-service
                port:
                  number: 51600
          - path: /px.cloudapi.ArtifactTracker/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.APIKeyManager/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.AuthService/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.ConfigService/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.OrganizationService/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.PluginService/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.UserService/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.VizierClusterInfo/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.VizierDeploymentKeyManager/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.cloudapi.VizierImageAuthorization/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 5555
          - path: /px.api.vizierpb.VizierService/
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 4444
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-proxy-service
                port:
                  number: 443
